# tgtg

./: .codecov.yml  .dockerignore  .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  DOCKER_README.md  Dockerfile  Dockerfile.alpine  Dockerfile.dev  Makefile  Procfile  README.md  RELEASE_CHECKLIST.md  build.sh  config.sample.ini  docker-compose.builder.yml  docker-compose.dev.yml  docker-compose.yml  dockerfile  entrypoint.sh  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.dev.txt  requirements.txt  sample.env  scanner.spec  scanner_win.spec  toogoodtogo.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/actions/: setup-poetry-action.yml
.github/actions/setup-poetry-action/: action.yml
.github/workflows/: ci.yml  codeql-analysis.yml  codeql.yml  dependabot.yml  docker-multi-arch.yml  publish-wiki.yml  pyinstaller-linux.yml  pyinstaller-windows.yml  release.yml  releases.yml  tests.yml  tgtg.yml
contrib/: tgtg-scanner.service
docker/: DOCKER_README.md  Dockerfile  Dockerfile.alpine  entrypoint.sh  requirements.txt
src/: .env  _version.py  config.sample.ini  helper.py  login.py  main.py  scanner.py  shared.py  shared_variables.py
src/helpers/: distance_time_calculator.py
src/models/: __init__.py  config.py  cron.py  distance_time.py  errors.py  favorites.py  google.py  item.py  location.py  metrics.py  order.py  order_item_base.py  reservations.py
src/notifiers/: __init__.py  apprise.py  base.py  console.py  ifttt.py  notifiers.py  ntfy.py  pushSafer.py  push_safer.py  script.py  smtp.py  telegram.py  webhook.py
src/tests/tgtg/: constants.py  login.py  test_tgtg.py
src/tgtg/: __init__.py  tgtgClient.py  tgtg_client.py
tests/: conftest.py  test_config.py  test_cron.py  test_favorites.py  test_google.py  test_item.py  test_location.py  test_metrics.py  test_notifiers.py  test_reservations.py  test_tgtg.py  tgtg_server.py
tgtg_scanner/: __main__.py  _version.py  errors.py  scanner.py
tgtg_scanner/models/: __init__.py  config.py  cron.py  favorites.py  item.py  location.py  metrics.py  reservations.py
tgtg_scanner/notifiers/: __init__.py  apprise.py  base.py  console.py  discord.py  ifttt.py  notifiers.py  ntfy.py  push_safer.py  script.py  smtp.py  telegram.py  webhook.py
tgtg_scanner/tgtg/: __init__.py  tgtg_client.py
wiki/: Configuration.md  Examples.md  FAQ.md  Home.md  Setup.md
