[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Henning Merklinger <henning.merklinger@gmail.com>"]
description = "Notifications for Too Good To Go"
documentation = "https://github.com/Der-Henning/tgtg/wiki"
keywords = ["tgtg", "toogoodtogo", "notifications"]
license = "GPL-3.0-or-later"
name = "tgtg-scanner"
packages = [{include = "tgtg_scanner"}]
readme = "README.md"
repository = "https://github.com/Der-Henning/tgtg"
version = "1.22.0"

[tool.poetry.dependencies]
apprise = "^1.4.0"
babel = "^2.16.0"
colorlog = "^6.7.0"
cron-descriptor = "^1.4.0"
discord = "^2.3.2"
googlemaps = "^4.10.0"
humanize = "^4.7.0"
packaging = "^24.0"
progress = "^1.6"
prometheus-client = "^0.21.0"
pycron = "^3.0.0"
python = ">=3.9,<3.13"
python-pushsafer = "^1.1"
python-telegram-bot = {extras = ["callback-data"], version = "^21.0.1"}
requests = "^2.31.0"

[tool.poetry.group.build.dependencies]
pyinstaller = "^6.3.0"

[tool.poetry.group.test.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
pytest-mock = "^3.11.1"
responses = "^0.25.0"

[tool.poetry.scripts]
scanner = "tgtg_scanner.__main__:main"
tgtg_server = "tests.tgtg_server:main"

[tool.pytest.ini_options]
markers = [
  "tgtg_api: test directly calls the tgtg API (deselect with '-m \"not tgtg_api\"')"
]
